<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/wallpaper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/wallpaper_1" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/include_title" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipChildren="false"
            android:clipToOutline="false"
            android:clipToPadding="false">

            <androidx.leanback.widget.VerticalGridView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="false"
                android:clipToOutline="false"
                android:clipToPadding="false"
                android:paddingLeft="@dimen/fragment_app_list_content_padding_bottom"
                android:paddingRight="@dimen/fragment_app_list_content_padding_bottom"
                android:paddingBottom="@dimen/fragment_app_list_content_padding_bottom"
                app:focusOutEnd="true"
                app:focusOutFront="true" />

            <TextView
                android:id="@+id/none"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="false"
                android:clipToOutline="false"
                android:clipToPadding="false"
                android:gravity="center"
                android:text="@string/no_data"
                android:textSize="@dimen/fragment_app_list_none_text_size"
                android:visibility="gone" />
        </FrameLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="@dimen/fragment_app_list_div_opt_height"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/previous"
                android:layout_width="@dimen/fragment_app_list_div_opt_previous_width"
                android:layout_height="@dimen/fragment_app_list_div_opt_previous_height"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ripple_style_3"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:text="@string/previous"
                android:textColor="@color/text_color_style_1"
                android:textSize="@dimen/fragment_app_list_div_opt_previous_text_size" />

            <TextView
                android:id="@+id/page"
                android:layout_width="@dimen/fragment_app_list_div_opt_previous_width"
                android:layout_height="@dimen/fragment_app_list_div_opt_previous_height"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="1"
                android:textColor="@color/text_color_style_1"
                android:textSize="@dimen/fragment_app_list_div_opt_previous_text_size" />

            <TextView
                android:id="@+id/next"
                android:layout_width="@dimen/fragment_app_list_div_opt_previous_width"
                android:layout_height="@dimen/fragment_app_list_div_opt_previous_height"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ripple_style_3"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:text="@string/next"
                android:textColor="@color/text_color_style_1"
                android:textSize="@dimen/fragment_app_list_div_opt_previous_text_size" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>